--- a/.env
+++ b/.env
@@ -1,4 +1,1 @@
-DATABASE_URL="postgresql://postgres.tfbyroqstinvaormcccu:[Waleed19510@-]@aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres" 
-FLASK_ENV=development  
-FLASK_DEBUG=True  
-PORT=5000 
+DATABASE_URL=postgresql://neondb_owner:npg_XMp8gVUo7CGB@ep-curly-salad-a150g880-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
